# talking-avatar

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioStage.tsx  CharacterStage.tsx  Gallery.tsx  GenerateStage.tsx  SidePanel.tsx  StageIndicator.tsx
frontend/src/components/ui/: button.tsx  card.tsx  radio-group.tsx  tabs.tsx
storage/audio/: .gitkeep
storage/avatars/: .gitkeep
storage/characters/: .gitkeep
